After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 735633 - eog crashes when attempting two-finger zoom gesture on touchpad
eog crashes when attempting two-finger zoom gesture on touchpad
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: image viewer
3.14.x
Other Linux
: Normal normal
: ---
Assigned To: EOG Maintainers
EOG Maintainers
Depends on: 735629
Blocks:
 
 
Reported: 2014-08-28 19:30 UTC by Jason Gerecke
Modified: 2015-03-26 18:07 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jason Gerecke 2014-08-28 19:30:38 UTC
The eog process aborts with the following error when a two (or more) finger gesture is attempted:

EOG:ERROR:eog-scroll-view.c:1316:set_zoom: assertion failed: (zoom > 0.0)

This appears to be because the gesture recognizer sees all touches from a touchpad at the same location, making the distance (and hence zoom factor) zero. Fixing bug #735629 fixes this.
Comment 1 Felix Riemann 2014-08-30 12:11:51 UTC
Hmm, I am wondering whether that assertion is actually still needed.

The code following it would have clamped the zoom to 2% anyway.
Comment 2 Carlos Garnacho 2014-08-30 12:31:13 UTC
Oops, it is acknowledged that GTK+ gestures don't work that well yet with indirect touch devices, at the very least values that are not in pixel-based scales ought to work though, moving this to GTK+.
Comment 3 Matthias Clasen 2014-12-22 16:12:13 UTC
I tend to agree that the assertion in set_zoom should just go.
Comment 4 Sebastien Bacher 2015-03-26 15:33:26 UTC
There are a few report of that issue against eog in Ubuntu
https://bugs.launchpad.net/ubuntu/+source/eog/+bug/1436785

"#0  0x00007fe6550a6e37 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
        resultvar = 0
        pid = 10207
        selftid = 10207
  • #1 __GI_abort
    at abort.c line 89
  • #2 g_assertion_message
  • #3 g_assertion_message_expr
    at /build/buildd/glib2.0-2.43.91/./glib/gtestutils.c line 2371
  • #4 set_zoom
    at eog-scroll-view.c line 1316
  • #5 zoom_gesture_update_cb
    at eog-scroll-view.c line 1976
  • #6 g_closure_invoke
    at /build/buildd/glib2.0-2.43.91/./gobject/gclosure.c line 768
  • #7 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.43.91/./gobject/gsignal.c line 3549
  • #8 g_signal_emit_valist
    at /build/buildd/glib2.0-2.43.91/./gobject/gsignal.c line 3305
  • #9 g_signal_emit
    at /build/buildd/glib2.0-2.43.91/./gobject/gsignal.c line 3361
  • #10 gtk_gesture_handle_event
    at /build/buildd/gtk+3.0-3.14.8/./gtk/gtkgesture.c line 641

Comment 5 Felix Riemann 2015-03-26 17:59:41 UTC
Oops, totally forgot about that assertion.
Carlos, I am taking this bug back to eog to fix the actual crash.

The feature bug for gtk would be bug 735629, no?
If not I'll clone the ticket for gtk+. :)
Comment 6 Felix Riemann 2015-03-26 18:07:46 UTC
Removed the assertion now for 3.16.1 so we are not segfaulting anymore.
I was thinking about rolling a 3.14.4 in the next days to push out some late-coming translation updates and will most likely ship the fix as well.

commit ee33862e7cede4fd2ff34e4cfcb4192dfdd52b46
Author: Felix Riemann <>
Date:   Thu Mar 26 19:01:05 2015 +0100

    EogScrollView: Remove unneeded g_assert()
    
    The code following it is able to handle the situation.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=735633
---
This problem has been fixed in our software repository. The fix will go into the next software release. Once that release is available, you may want to check for a software upgrade provided by your Linux distribution.