EogScrollView: Remove unneeded g_assert()

The code following it is able to handle the situation.

https://bugzilla.gnome.org/show_bug.cgi?id=735633